Font styles; links.

--- a/hero/sass/style.sass
+++ b/hero/sass/style.sass
@@ -510,6 +510,12 @@
 	p
 		font-family: $sans
 		
+	a
+		text-decoration: none
+		
+	a:visited, a:active
+		color: #000
+		
 .blog-preview
 	margin-top: -10px
 
@@ -525,12 +531,15 @@
 	.blog-entry-title
 		font-size: 22px
 		font-family: $serif
+		text-decoration: none
+		color: #000
 		
 	.blog-entry-data
 		font-family: $sans
 		color: #666
 		font-size: 13px
 		padding-left: 1px
+		text-decoration: none
 		
 	figure
 		float: left
@@ -560,12 +569,15 @@
 	.blog-entry-title
 		font-size: 18px
 		font-family: $serif
+		text-decoration: none
+		color: #000
 		
 	.blog-entry-data
 		font-family: $sans
 		color: #666
 		font-size: 12px
 		padding-left: 1px
+		text-decoration: none
 		
 	figure
 		float: left
@@ -606,11 +618,14 @@
 		font-family: $sans
 		font-size: 14px
 		font-weight: bold
+		text-decoration: none
+		color: #000
 		
 	.blog-entry-data
 		font-family: $sans
 		color: #666
 		font-size: 13px
+		text-decoration: none
 		
 			
 .blog-head
