--- a/hero/stylesheets/style.css
+++ b/hero/stylesheets/style.css
@@ -651,136 +651,100 @@
 #blogs a:visited, #blogs a:active {
   color: black;
 }
-
 /* line 519, ../sass/style.sass */
-.blog-preview {
-  margin-top: -10px;
+#blogs figure {
+  float: left;
+  background-color: black;
+  overflow: hidden;
+  *zoom: 1;
+}
+/* line 524, ../sass/style.sass */
+#blogs figure img {
+  height: 100%;
 }
 
-/* line 522, ../sass/style.sass */
-.primary {
+/* line 527, ../sass/style.sass */
+.primary, .secondary, .tertiary {
   width: 308.667px;
   height: 316.667px;
   padding: 8px;
   float: left;
   overflow: hidden;
   *zoom: 1;
+}
+
+/* line 534, ../sass/style.sass */
+.primary, .secondary {
   border-right: solid 1px #cccccc;
   -moz-box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
   -webkit-box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
   -o-box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
 }
-/* line 531, ../sass/style.sass */
-.primary .blog-entry-title {
-  font-size: 22px;
+/* line 538, ../sass/style.sass */
+.primary .blog-entry-title, .secondary .blog-entry-title {
   font-family: "Georgia", "Times New Roman", serif;
   text-decoration: none;
   color: black;
 }
-/* line 537, ../sass/style.sass */
-.primary .blog-entry-data {
+/* line 543, ../sass/style.sass */
+.primary .blog-entry-data, .secondary .blog-entry-data {
+  padding-left: 1px;
+}
+
+/* line 546, ../sass/style.sass */
+.blog-entry-data {
   font-family: "Helvetica", "Arial", sans-serif;
   color: #666666;
   font-size: 13px;
-  padding-left: 1px;
   text-decoration: none;
 }
-/* line 544, ../sass/style.sass */
+
+/* line 552, ../sass/style.sass */
+.blog-preview {
+  margin-top: -10px;
+}
+
+/* line 556, ../sass/style.sass */
+.primary .blog-entry-title {
+  font-size: 22px;
+}
+/* line 559, ../sass/style.sass */
 .primary figure {
-  float: left;
   height: 112px;
   width: 112px;
   margin: 4px 8px 4px 0px;
-  background-color: black;
-  overflow: hidden;
-  *zoom: 1;
 }
-/* line 552, ../sass/style.sass */
-.primary figure img {
-  height: 100%;
-}
-/* line 555, ../sass/style.sass */
+/* line 564, ../sass/style.sass */
 .primary p {
   font-size: 14px;
   line-height: 20px;
 }
 
-/* line 559, ../sass/style.sass */
-.secondary {
-  width: 308.667px;
-  height: 316.667px;
-  padding: 8px;
-  float: left;
-  overflow: hidden;
-  *zoom: 1;
-  border-right: solid 1px #cccccc;
-  -moz-box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
-  -webkit-box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
-  -o-box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
-  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
-  display: block;
-}
 /* line 569, ../sass/style.sass */
 .secondary .blog-entry-title {
   font-size: 18px;
-  font-family: "Georgia", "Times New Roman", serif;
-  text-decoration: none;
-  color: black;
 }
-/* line 575, ../sass/style.sass */
-.secondary .blog-entry-data {
-  font-family: "Helvetica", "Arial", sans-serif;
-  color: #666666;
-  font-size: 12px;
-  padding-left: 1px;
-  text-decoration: none;
-}
-/* line 582, ../sass/style.sass */
+/* line 573, ../sass/style.sass */
 .secondary figure {
-  float: left;
   height: 60px;
   width: 60px;
   margin: 4px 8px 4px 0px;
-  background-color: black;
-  overflow: hidden;
-  *zoom: 1;
 }
-/* line 590, ../sass/style.sass */
-.secondary figure img {
-  height: 100%;
-}
-/* line 593, ../sass/style.sass */
+/* line 578, ../sass/style.sass */
 .secondary p {
   font-size: 13px;
   line-height: 17px;
 }
 
-/* line 597, ../sass/style.sass */
-.tertiary {
-  width: 308.667px;
-  height: 316.667px;
-  padding: 8px;
-  float: left;
-  overflow: hidden;
-  *zoom: 1;
-}
-/* line 604, ../sass/style.sass */
+/* line 583, ../sass/style.sass */
 .tertiary figure {
   height: 66px;
   width: 66px;
   margin: 0px;
-  float: left;
-  overflow: hidden;
-  *zoom: 1;
-  background-color: black;
   margin-right: 6px;
 }
-/* line 613, ../sass/style.sass */
-.tertiary figure img {
-  height: 100%;
-}
-/* line 616, ../sass/style.sass */
+/* line 589, ../sass/style.sass */
 .tertiary .blog-entry-title {
   margin-top: 4px;
   font-family: "Helvetica", "Arial", sans-serif;
@@ -789,22 +753,15 @@
   text-decoration: none;
   color: black;
 }
-/* line 624, ../sass/style.sass */
-.tertiary .blog-entry-data {
-  font-family: "Helvetica", "Arial", sans-serif;
-  color: #666666;
-  font-size: 13px;
-  text-decoration: none;
-}
 
-/* line 631, ../sass/style.sass */
+/* line 598, ../sass/style.sass */
 .blog-head {
   width: 100%;
   height: 66px;
   padding: 3px;
 }
 
-/* line 636, ../sass/style.sass */
+/* line 603, ../sass/style.sass */
 .blogs-linky {
   position: absolute;
   bottom: 10px;
@@ -820,12 +777,12 @@
   -o-box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
 }
-/* line 648, ../sass/style.sass */
+/* line 615, ../sass/style.sass */
 .blogs-linky p {
   margin: 0px;
 }
 
-/* line 651, ../sass/style.sass */
+/* line 618, ../sass/style.sass */
 .author {
   font-weight: bold;
 }
